対戦結果表示機能開発
